--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">rescuemate</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="default_web_client_id">60477271201-39bngt1890u9kkdk6rr4fl7ukb7i8vjl.apps.googleusercontent.com</string>
+    <string name="channel_name">rescuemate_alerts</string>
+    <string name="channel_description">This is a notification channel for alerts from Rescuemate application.</string>
 </resources>
